--- a/botconfig.json
+++ b/botconfig.json
@@ -1,4 +1,4 @@
 {
-  "token": "NDUwMTc4MjE0NDM5MTU3NzYx.Devdpg.X_AxXtyyU5ll3cEkORqV_oJSJUM",
+  "token": "NDU3MzQwOTA3MDI5NTI4NTc2.DgXrnQ.EEpIV1IitpzAZVY0Oxj9438TnMc",
   "prefix": "-"
 }
